--- a/app/src/main/res/layout/activity_create_food_res.xml
+++ b/app/src/main/res/layout/activity_create_food_res.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/room_reservation"
+        android:background="@drawable/food_reservation"
         android:scaleX="2.2" />
 
     <ScrollView
@@ -21,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:padding="10dp"
+            android:background="@drawable/background_dark_shadow"
             android:orientation="vertical">
 
             <LinearLayout
@@ -233,6 +234,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:hint="Food quantity"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -254,6 +256,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
+                    android:textColorHint="#9EFFFFFF"
                     android:hint="Your address" />
             </LinearLayout>
 
@@ -276,6 +279,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:hint="Your contact number"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -299,6 +303,7 @@
                     android:layout_marginHorizontal="20dp"
                     android:editable="false"
                     android:hint="DD/MM/YYYY"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="none" />
             </LinearLayout>
 
