--- a/app/src/main/res/layout/activity_edit_food_res.xml
+++ b/app/src/main/res/layout/activity_edit_food_res.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/room_reservation"
+        android:background="@drawable/food_reservation"
         android:scaleX="2.2" />
 
     <ScrollView
@@ -20,7 +20,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:padding="10dp"
+            android:background="@drawable/background_dark_shadow"
             android:orientation="vertical">
 
             <LinearLayout
@@ -232,6 +233,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:hint="Food quantity"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -253,6 +255,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
+                    android:textColorHint="#9EFFFFFF"
                     android:hint="Your address" />
             </LinearLayout>
 
@@ -275,6 +278,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:hint="Your contact number"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -298,6 +302,7 @@
                     android:layout_marginHorizontal="20dp"
                     android:editable="false"
                     android:hint="DD/MM/YYYY"
+                    android:textColorHint="#9EFFFFFF"
                     android:inputType="none" />
             </LinearLayout>
 
