--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterPage">
+    tools:context=".EditProfile">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/register_login"
-        android:scaleX="2.5" />
+        android:background="@drawable/user_profile"
+        android:scaleX="2.4" />
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background_radius"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="20dp"
-            android:background="@drawable/background_radius"
+            android:padding="10dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/Update_porfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
-                android:text="Became a Member"
+                android:text="Profile Update"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="25sp" />
@@ -69,14 +68,6 @@
                 android:hint="Phone Number" />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/emailTextField"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:hint="Email" />
-
-            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,14 +83,6 @@
                 android:layout_marginTop="20dp"
                 android:hint="Age" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_text_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:hint="Password"
-                android:inputType="textPassword" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -115,7 +98,8 @@
                     android:id="@+id/registerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Register" />
+                    android:onClick="updateProfile"
+                    android:text="Update" />
 
                 <Space
                     android:layout_width="0dp"
@@ -130,25 +114,9 @@
                 android:layout_marginVertical="20dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Already have an account? "
-                    android:textColor="#111"
-                    android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/txt_login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="5dp"
-                    android:onClick="forLogin"
-                    android:text="Login"
-                    android:textColor="#111"
-                    android:textSize="15sp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
