--- a/app/src/main/res/layout/activity_edit_room_res.xml
+++ b/app/src/main/res/layout/activity_edit_room_res.xml
@@ -228,6 +228,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:inputType="number"
+                    android:textColorHint="#9EFFFFFF"
                     android:hint="Number of rooms" />
             </LinearLayout>
 
@@ -249,6 +250,7 @@
                     android:layout_marginHorizontal="20dp"
                     android:inputType="none"
                     android:editable="false"
+                    android:textColorHint="#9EFFFFFF"
                     android:hint="DD/MM/YYYY" />
             </LinearLayout>
 
@@ -270,6 +272,7 @@
                     android:layout_marginHorizontal="20dp"
                     android:inputType="none"
                     android:editable="false"
+                    android:textColorHint="#9EFFFFFF"
                     android:hint="DD/MM/YYYY" />
             </LinearLayout>
             <LinearLayout
