--- a/app/src/main/res/layout/activity_food_res_details.xml
+++ b/app/src/main/res/layout/activity_food_res_details.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.food.FoodResDetails">
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/room_reservation"
+        android:background="@drawable/food_reservation"
         android:scaleX="2.2" />
 
     <ScrollView
@@ -19,7 +20,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:padding="10dp"
+            android:background="@drawable/background_dark_shadow"
             android:orientation="vertical">
 
             <LinearLayout
@@ -52,11 +54,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/background_radius"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
-                android:paddingVertical="20dp"
-                android:layout_marginBottom="20dp">
+                android:paddingVertical="20dp">
 
 
                 <TextView
