--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,35 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_menu"
+
     tools:context=".MainMenu">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background_radius"
+
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:background="@drawable/background_radius"
             android:orientation="vertical">
 
             <!--====================  Welcome title =======================-->
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Welcome Hotel Elite"
-                android:textAlignment="center"
-                android:layout_marginTop="20dp"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:text="Welcome Hotel Elite"
+                    android:textColor="#000000"
+                    android:textSize="30sp" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@color/purple_500"
+                    android:onClick="goToProfile"
+                    app:srcCompat="@drawable/user_icon" />
+
+            </LinearLayout>
 
             <!--====================  Greeting line =======================-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="Make Your Reservation Today!"
                 android:textColor="#AF0000"
                 android:textSize="18sp" />
@@ -41,13 +63,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
 
                 <!--====================  Room Reservation Button =======================-->
                 <LinearLayout
@@ -59,17 +77,19 @@
 
                     <ImageButton
                         android:id="@+id/room_reservation"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:background="@drawable/room_reservation"
-                        android:scaleType="fitXY"
+                        android:contentDescription="Room Reservation"
                         android:onClick="roomRes"
-                        android:contentDescription="Room Reservation" />
+                        android:scaleType="fitXY" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Room Reservation" />
+                        android:text="Room Reservation"
+                        android:textColor="#000000"
+                        android:textSize="20dp" />
                 </LinearLayout>
 
                 <Space
@@ -87,23 +107,22 @@
 
                     <ImageButton
                         android:id="@+id/hall_reservation"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/room_reservation"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:background="@drawable/hall_reservation"
+                        android:contentDescription="Hall Reservation"
                         android:onClick="hallRes"
-                        android:contentDescription="Hall Reservation" />
+                        android:scaleType="fitXY" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hall Reservation" />
+                        android:text="Hall Reservation"
+                        android:textColor="#000000"
+                        android:textSize="20dp" />
                 </LinearLayout>
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+
             </LinearLayout>
 
 
@@ -111,13 +130,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
 
                 <!--====================  Room Reservation Button =======================-->
                 <LinearLayout
@@ -129,17 +144,19 @@
 
                     <ImageButton
                         android:id="@+id/food_reservation"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/room_reservation"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:background="@drawable/food_reservation"
+                        android:contentDescription="Food Reservation"
                         android:onClick="foodRes"
-                        android:contentDescription="Food Reservation" />
+                        android:scaleType="fitXY" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Food Reservation" />
+                        android:text="Food Reservation"
+                        android:textColor="#000000"
+                        android:textSize="20dp" />
                 </LinearLayout>
 
                 <Space
@@ -157,24 +174,30 @@
 
                     <ImageButton
                         android:id="@+id/event_reservation"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/room_reservation"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:background="@drawable/event_reservation"
+                        android:contentDescription="Event Reservation"
                         android:onClick="eventRes"
-                        android:contentDescription="Event Reservation" />
+                        android:scaleType="fitXY" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Event Reservation" />
+                        android:text="Event Reservation"
+                        android:textColor="#000000"
+                        android:textSize="20dp" />
                 </LinearLayout>
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_radius"
+
+                android:scaleX="1" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
