--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -74,6 +74,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
 
@@ -91,6 +92,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
 
@@ -108,6 +110,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <TextView
@@ -124,6 +127,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <TextView
@@ -140,6 +144,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <TextView
@@ -156,6 +161,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <TextView
@@ -172,6 +178,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="-------------"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <LinearLayout
